* CSS update : set #fmenu overflow property to hidden (avoid uncorrect FeatureInfo actions popup display when hitting map right side)

--- a/client/js/mapshup/theme/default/mapshup.css
+++ b/client/js/mapshup/theme/default/mapshup.css
@@ -276,6 +276,7 @@ input:focus {
     background-color:rgba(0,0,0,0.7);
     text-align:center;
     padding:10px;
+    overflow:hidden;
     z-index:10000;
 }
 #fmenu .title {
